--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cm",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://raphcrf.github.io/",
+  "homepage": "http://raphcrf.github.io",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "node-fetch": "^2.6.0",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
